--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Git</title>
-</head>
-<body>
-  <h1>I learn Github</h1>
-  <p>I want to learn git/github</p>
-  <p>Aready learned git commit</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Git</title>
+  </head>
+  <body>
+    <h1>I learn Github</h1>
+    <p>I want to learn git/github</p>
+    <p>Already learned git commit</p>
+  </body>
 </html>
