--- a/index.html
+++ b/index.html
@@ -11,5 +11,15 @@
     <h1>I learn Github</h1>
     <p>I want to learn git/github</p>
     <p>Already learned git commit</p>
+    <div class="menu">
+      <ul>
+        <li>Home</li>
+        <li>About Us</li>
+        <li>Service</li>
+        <li>Program</li>
+        <li>Monitoring</li>
+        <li>Contact</li>
+      </ul>
+    </div>
   </body>
 </html>
