--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Git</title>
   </head>
   <body>
-    <h1>I learn Github</h1>
+    <h2>I learn Github</h2>
     <p>I want to learn git/github</p>
     <p>Already learned git commit</p>
     <div class="menu">
