--- a/index.html
+++ b/index.html
@@ -4,22 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Git</title>
+    <title>Adventure</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h2>I learn Github</h2>
-    <p>I want to learn git/github</p>
-    <p>Already learned git commit</p>
-    <div class="menu">
-      <ul>
-        <li>Home</li>
-        <li>About Us</li>
-        <li>Service</li>
-        <li>Program</li>
-        <li>Monitoring</li>
-        <li>Contact</li>
+    <nav class="navber">
+      <h1 class="logo">Adventure</h1>
+      <ul class="nav-links">
+        <li class="active"><a href="#"></a>Home</li>
+        <li><a href="#"></a>Tours</li>
+        <li><a href="#"></a>Explore</li>
+        <li><a href="#"></a>About</li>
+        <li class="cont"><a href="#"></a>Contact</li>
       </ul>
-    </div>
+    </nav>
+
+    <header>
+      <div class="header-content">
+        <h2>Explore The Colorful World</h2>
+        <div class="line"></div>
+        <h1>A Wonderful Gift</h1>
+        <a href="#" class="ctn">Learn more</a>
+      </div>
+    </header>
   </body>
 </html>
