--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="navber">
-      <h1 class="logo">Adventure</h1>
+      <h1 class="logo">afra@ibnat</h1>
       <ul class="nav-links">
         <li class="active"><a href="#"></a>Home</li>
         <li><a href="#"></a>Tours</li>
